--- a/weatherstyle.css
+++ b/weatherstyle.css
@@ -15,3 +15,14 @@ body {
   font-size: 25px;
   padding: 10px;
 }
+
+button {
+  text-align: center;
+  color: #142e47;
+  border: none;
+  border-radius: 3px;
+  padding: 5px 10px 5px 10px;
+  background-color: #f7f1ea;
+  font-size: 15px;
+  font-weight: bold;
+}
